--- a/index.html
+++ b/index.html
@@ -435,32 +435,37 @@
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="5500">カット（S・B込み）￥5,500</button>
             <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="3300">枝毛カット（メンテナンス）￥3,300</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="1100">前髪カット　￥1,100</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="1100">前髪カット ￥1,100</button>
             <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="2750">キッズカット（小学生未満）￥2,750</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="3300">小学生カット￥3,300</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="8800">ワンメイク（全体）カラー（S・B込み）￥8,800</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="7700">リタッチ（S・B込み）￥7,700</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="9900">イルミナプレミアカラー￥9,900</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="14300">ダブルカラー￥14,300~</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="2200">ハイライト・ローライ￥2,200~</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="1650">インナーカラー￥1,650~</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="3300">グラデーションカラー（ブリーチ使用可）￥3,300~</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="5500">バレイヤージュ￥5,500</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="3300">ポイントパーマ（前髪など）￥3,300~</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="8800">フルパーマ（S・B込み）￥8,800</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15400">縮毛矯正（カットなし）￥15,400</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="17600">髪質改善酸性矯正　（カットなし）￥17,600</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="3300">前髪縮毛矯正￥3,300</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="2750">イーデス導入型トリートメント￥2,750</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="4400">ホイップ泡コラーゲントリートメント￥4,400</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="3300">TOKIOトリートメント￥3,300</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="3850">ヘアセット（フルアップ）￥3,850</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="3300">ハーフアップセット￥3,300</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="2200">ダウンスタイルセット（巻きスタイル）￥2,200</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="2750">ヴィージェ野菜スパ￥2,750</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="5500">TOKIOヘットスパ＆トリートメント￥5,500</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="2200">メンズ　スキャンプスパ￥2,200</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="1100">眉カット（メンズ）￥1,100</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="3300">小学生カット ￥3,300</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="8800">ワンメイク（全体）カラー（S・B込み）￥8,800</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="7700">リタッチ（S・B込み）￥7,700</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="9900">イルミナプレミアカラー ￥9,900</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15400">ダブルカラー ￥15,400~</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="2200">ハイライト・ローライト ￥2,200~</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="1650">インナーカラー ￥1,650~</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment12')" data-price="3300">グラデーションカラー（ブリーチ使用可）￥3,300~</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment13')" data-price="6600">バレイヤージュ ￥6,600</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment14')" data-price="3300">ポイントパーマ（前髪など）￥3,300~</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment15')" data-price="8800">フルパーマ（S・B込み）￥8,800</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment16')" data-price="15400">縮毛矯正（カットなし）￥15,400</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment17')" data-price="17600">髪質改善酸性矯正（カットなし）￥17,600</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment18')" data-price="3300">前髪縮毛矯正 ￥3,300</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment19')" data-price="2750">イーデス導入型トリートメント ￥2,750</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment20')" data-price="4400">ヘアセット（フルアップ）￥3,850</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment21')" data-price="3300">TOKIOトリートメント ￥3,300</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment22')" data-price="3850">ヘアセット（フルアップ）￥3,850</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment23')" data-price="3300">ハーフアップセット ￥3,300</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment24')" data-price="2200">ダウンスタイルセット（巻きスタイル）￥2,200</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment25')" data-price="2750">シャンプーブロー ￥2,750</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment26')" data-price="2750">ヴィージェ野菜スパ ￥2,750</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment27')" data-price="5500">TOKIOヘットスパ＆トリートメント ￥5,500</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment28')" data-price="1100">眉カット（メンズ）￥1,100</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment29')" data-price="13200">カット&リタッチ ￥11,000</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment30')" data-price="11000">カット&パーマ ￥14,300</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment31')" data-price="14300">カット&パーマ ￥14,300</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment32')" data-price="18700">カット&縮毛矯正 ￥18,700</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment33')" data-price="22000">カット＆髪質改善酸性矯正 ￥22,000</button>
         </div>
 
         <div class="label">希望日時</div>
@@ -544,16 +549,40 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '目力チャージ4D': 15,
-            '体幹軸リセット': 20,
-            '吸引リフレッシュ': 20,
-            '内臓チューニング': 20,
-            '脳内クリーンアップ': 20,
-            'EMS楽トレ': 20,
-            '伝統鍼灸': 20,
-            '美容鍼': 20
+            'カット（S・B込み）￥5,500': 60,
+            '枝毛カット（メンテナンス）￥3,300': 30,
+            '前髪カット ￥1,100': 10,
+            'キッズカット（小学生未満）￥2,750': 30,
+            '小学生カット ￥3,300': 30,
+            'ワンメイク（全体）カラー（S・B込み）￥8,800': 60,
+            'リタッチ（S・B込み）￥7,700': 60,
+            'イルミナプレミアカラー ￥9,900': 60,
+            'ダブルカラー ￥15,400~': 120,
+            'ハイライト・ローライト ￥2,200~': 30,
+            'インナーカラー ￥1,650~': 30,
+            'グラデーションカラー（ブリーチ使用可）￥3,300~': 30,
+            'バレイヤージュ ￥6,600': 30,
+            'ポイントパーマ（前髪など）￥3,300~': 30,
+            'フルパーマ（S・B込み）￥8,800': 60,
+            '縮毛矯正（カットなし）￥15,400': 120,
+            '髪質改善酸性矯正（カットなし）￥17,600': 120,
+            '前髪縮毛矯正 ￥3,300': 30,
+            'イーデス導入型トリートメント ￥2,750': 0,
+            'ホイップ泡コラーゲントリートメント ￥4,400': 0,
+            'TOKIOトリートメント ￥3,300': 0,
+            'ヘアセット（フルアップ）￥3,850': 45,
+            'ハーフアップセット ￥3,300': 45,
+            'ダウンスタイルセット（巻きスタイル）￥2,200': 30,
+            'シャンプーブロー ￥2,750': 30,
+            'ヴィージェ野菜スパ ￥2,750': 15,
+            'TOKIOヘットスパ＆トリートメント ￥5,500': 20,
+            '眉カット（メンズ）￥1,100': 0,
+            'カット&カラー ￥13,200': 120,
+            'カット&リタッチ ￥11,000': 90,
+            'カット&パーマ ￥14,300': 120,
+            'カット&縮毛矯正 ￥18,700': 180,
+            'カット＆髪質改善酸性矯正 ￥22,000': 180
         };
-
 
         let selectedMenuTime = 0;
 
@@ -834,7 +863,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n茨木店\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}、${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n茨木店\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
@@ -899,19 +928,20 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-                '09:00', '09:15', '09:30', '09:45',
-                '10:00', '10:15', '10:30', '10:45',
-                '11:00', '11:15', '11:30', '11:45',
-                '12:00', '12:15', '12:30', '12:45',
-                '13:00', '13:15', '13:30', '13:45',
-                '14:00', '14:15', '14:30', '14:45',
-                '15:00', '15:15', '15:30', '15:45',
-                '16:00', '16:15', '16:30', '16:45',
-                '17:00', '17:15', '17:30', '17:45',
-                '18:00', '18:15', '18:30', '18:45',
-                '19:00', '19:15', '19:30', '19:45',
-                '20:00'
+                '09:00', '09:30',
+                '10:00', '10:30',
+                '11:00', '11:30',
+                '12:00', '12:30',
+                '13:00', '13:30',
+                '14:00', '14:30',
+                '15:00', '15:30',
+                '16:00', '16:30',
+                '17:00', '17:30',
+                '18:00', '18:30',
+                '19:00', '19:30',
+                '20:00', '20:30'
             ];
+
 
             if (table.rows.length === 0) {
                 for (const time of times) {
@@ -987,15 +1017,56 @@
                         continue;
                     }
 
-                    // 18時以降に終了する予約を不可にする (17:30は可)
-                    if (slotEnd.getHours() === 18 && slotEnd.getMinutes() > 0) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    } else if (slotEnd.getHours() > 18) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
+                    // 18時以降に終了する予約を不可にする (火水木金のみ)
+                    if ([2, 3, 4, 5].includes(slotEnd.getDay())) { // 火:2, 水:3, 木:4, 金:5
+                        if (slotEnd.getHours() === 20 && slotEnd.getMinutes() > 30) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        } else if (slotEnd.getHours() > 20) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        }
+                    }
+
+                    // 18時以降に終了する予約を不可にする (火水木金のみ)
+                    if ([1].includes(slotEnd.getDay())) { // 火:2, 水:3, 木:4, 金:5
+                        if (slotEnd.getHours() === 14 && slotEnd.getMinutes() > 30) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        } else if (slotEnd.getHours() > 14) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        }
+                    }
+
+                    // 18時以降に終了する予約を不可にする (火水木金のみ)
+                    if ([0].includes(slotEnd.getDay())) { // 火:2, 水:3, 木:4, 金:5
+                        if (slotEnd.getHours() === 18 && slotEnd.getMinutes() > 30) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        } else if (slotEnd.getHours() > 18) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        }
+                    }
+
+                    // 18時以降に終了する予約を不可にする (火水木金のみ)
+                    if ([6].includes(slotEnd.getDay())) { // 火:2, 水:3, 木:4, 金:5
+                        if (slotEnd.getHours() === 19 && slotEnd.getMinutes() > 30) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        } else if (slotEnd.getHours() > 19) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        }
                     }
 
                     // ここで終了時間を使った条件処理を行う
