--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
             // 選択されたオプションを取得
             const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
             selectedMenu = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
-            selectedSymptom = selectedMenu.join('、 ');
+            selectedSymptom = selectedMenu.join('。 ');
 
             // メニュー時間と価格をリセット
             selectedMenuTime = 0;
