--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
 <body>
     <div class="container">
-        <h1>LANI 茨木店<br>予約フォーム
+        <h1>LANI 茨木店a<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
@@ -680,10 +680,10 @@
             // ボタンの選択状態を切り替える
             button.classList.toggle('active');
 
-            // 選択されたオプションを取得
-            const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
-            selectedMenu = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
-            selectedSymptom = selectedMenu.join('。 ');
+    // 選択されたオプションを取得
+    const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
+    selectedMenu = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
+    selectedSymptom = selectedMenu.join('a '); // 複数選択された場合は「,」で区切る
 
             // メニュー時間と価格をリセット
             selectedMenuTime = 0;
