--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
     // 選択されたオプションを取得
     const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
     selectedMenu = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
-    selectedSymptom = selectedMenu.join('a '); // 複数選択された場合は「,」で区切る
+    const selectedSymptomText = selectedMenuArray.join('あ '); // カンマ区切りで文字列に変換
 
             // メニュー時間と価格をリセット
             selectedMenuTime = 0;
