--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
 <body>
     <div class="container">
-        <h1>LANI 茨木店<br>予約フォーム
+        <h1>LANI 茨木店ｑｑｑ<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
@@ -683,7 +683,6 @@
     // 選択されたオプションを取得
     const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
     selectedMenu = Array.from(updatedSelectedButtons).map(btn => btn.textContent.trim());
-            selectedSymptom = selectedMenu.join('、'); // "、"で区切る
 
             // メニュー時間と価格をリセット
             selectedMenuTime = 0;
@@ -703,6 +702,7 @@
                     selectedSymptom.push(selectedMenu); // 選択されたメニューを配列に追加
                     menuPrice += parseInt(btn.getAttribute('data-price'), 10) || 0; // 各メニューの価格を合計
                 });
+                            selectedSymptom = selectedMenu.join('、'); // "、"で区切る
             }
 
             console.log('選択されたメニューの時間:', selectedMenuTime);
