--- a/index.html
+++ b/index.html
@@ -978,6 +978,11 @@
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
+                    // 土曜日以外のすべての曜日で15時20分は利用不可
+                    else if (slotStart.getHours() === 15 && slotStart.getMinutes() === 20 && slotStart.getDay() !== 6) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
                     // 休日（日曜日）で、ビジネスデーでない場合
                     else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕'; // 休日のため利用不可
