--- a/index.html
+++ b/index.html
@@ -297,7 +297,6 @@
                 /* テキストの高さ調整 */
             }
         }
-
     </style>
 </head>
 
@@ -338,16 +337,13 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">アルカリ除去 （後処理）</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アルカリ除去 （後処理）</button>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
                     data-price="15000">プレックス（前・後処理付）</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">コラーゲン（前処理付）</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">コラーゲン（前処理付）</button>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
                     data-price="15000">カラーケアトリートメント</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">頭皮保護ガード</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">頭皮保護ガード</button>
             </div>
         </div>
 
@@ -386,10 +382,12 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アルカリ除去 （後処理）</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">アルカリ除去 （後処理）</button>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
                     data-price="15000">カラーケアトリートメント</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">頭皮保護ガード</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">頭皮保護ガード</button>
             </div>
         </div>
 
@@ -489,7 +487,6 @@
             'プレックスカラー全体染め ロング': 1
         };
 
-
         let selectedMenuTime = 0;
 
         function updateDisplayInfo() {
@@ -529,8 +526,6 @@
         <p>${selectedSymptomText}</p>
         <hr>
         <p>${irradiationsText}</p>
-        <hr>
-        <p>${totalTimeText}</p>
         <hr>
         <p>${selectedDateText}</p>
         <hr>
@@ -870,7 +865,6 @@
                 '16:00', '16:20'
             ];
 
-
             if (table.rows.length === 0) {
                 for (const time of times) {
                     const row = document.createElement('tr');
@@ -1004,7 +998,7 @@
                         cell.classList.add('available');
                     }
                     // それ以外の条件
-                    else if (count <= 0) {
+                    else if (count <= 1) {
                         cell.textContent = '◯';
                         cell.classList.add('available');
                     } else {
