--- a/index.html
+++ b/index.html
@@ -297,12 +297,13 @@
                 /* テキストの高さ調整 */
             }
         }
+
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>ヘアカラー専門ＭＩＮＴ<br>石狩店<br>予約フォーム</h1>
+        <h1>ヘアカラー専門ＭＩＮＴ<br>新琴似店<br>予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -337,13 +338,16 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アルカリ除去 （後処理）</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">アルカリ除去 （後処理）</button>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
                     data-price="15000">プレックス（前・後処理付）</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">コラーゲン（前処理付）</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">コラーゲン（前処理付）</button>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
                     data-price="15000">カラーケアトリートメント</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">頭皮保護ガード</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">頭皮保護ガード</button>
             </div>
         </div>
 
@@ -382,12 +386,10 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">アルカリ除去 （後処理）</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アルカリ除去 （後処理）</button>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
                     data-price="15000">カラーケアトリートメント</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">頭皮保護ガード</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">頭皮保護ガード</button>
             </div>
         </div>
 
@@ -824,7 +826,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycby530-poI9BynaLlAtK_7q4ym4WWtzdfpYVVazO87e8yiZDpXlHDnqaroFpLcBtp9I/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbw3BDynN6sA-Te-SLwMUD21Yb_VzAz0hZOYY5-e5AR9hcOEGdigAKXjV-8xPW7FpZCv/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -925,7 +927,7 @@
                     slotStart.setHours(parseInt(times[j].split(':')[0]), parseInt(times[j].split(':')[1]), 0, 0);
 
                     const slotEnd = new Date(slotStart);
-                    let menuDuration = selectedMenuTime || 0;
+                    let menuDuration = selectedMenuTime || 10;
                     let visitDuration = selectedVisitTime || 0;
                     let irradiationsDuration = selectedirradiationsTime || 0;
 
