--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #13ca5e;
+            background-color: #322a25;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -106,7 +106,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #ff4c4c;
+            background-color: #779d5a;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -166,7 +166,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #779d5a;
             /* 選択されたカレンダーのセルの背景色を緑色に設定 */
             color: #fff;
             /* 選択されたセルのテキスト色を白に設定 */
@@ -355,68 +355,13 @@
                 /* テキストの高さ調整 */
             }
         }
-
-        .symptoms,
-        .options {
-            display: block;
-            /* ボタンを縦並びに */
-        }
-
-        .symptoms button,
-        .options button {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            background-color: #f7f7f7;
-            cursor: pointer;
-            box-sizing: border-box;
-            text-align: center;
-            white-space: nowrap;
-        }
-
-        .symptoms button.active,
-        .options button.active {
-            background-color: #444;
-            color: #fff;
-        }
-
-        .highlight-background {
-            cursor: pointer;
-            background-color: #005ea6;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 18px;
-            /* テキストを読みやすく */
-            display: flex;
-            justify-content: center;
-            /* オプションを中央寄せ */
-            align-items: center;
-            position: relative;
-            /* プラス記号を右端に配置 */
-        }
-
-        .symptoms,
-        .options {
-            display: block;
-            /* ボタンを縦並びに */
-        }
-
-        .highlight-text {
-            font-weight: bold;
-            display: inline-block;
-            color: #fff;
-            /* オプションテキストの色 */
-        }
+        
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>東川口やす接骨院テスト<br>予約フォーム
+        <h1>APU GOLF CAFE &BAR<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
@@ -424,21 +369,32 @@
         <div class="label">電話番号※必須</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <div class="label">ご来店回数※必須</div>
+        <div class="label">メールアドレス※必須</div>
+        <input type="text" id="mail" placeholder="メールアドレスを入力してください">
+
+        <div class="label">ご予約人数※必須</div>
+        <div class="info-text">※11名以上のご予約をご希望の際は<br>電話予約でご予約お願いします。</div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
+            <button type="button" id="aVisit" onclick="selectVisit(this)">1名</button>
+            <button type="button" id="bVisit" onclick="selectVisit(this)">2名</button>
+            <button type="button" id="cVisit" onclick="selectVisit(this)">3名</button>
+            <button type="button" id="dVisit" onclick="selectVisit(this)">4名</button>
+            <button type="button" id="eVisit" onclick="selectVisit(this)">5名</button>
+            <button type="button" id="fVisit" onclick="selectVisit(this)">6名</button>
+            <button type="button" id="gVisit" onclick="selectVisit(this)">7名</button>
+            <button type="button" id="hVisit" onclick="selectVisit(this)">8名</button>
+            <button type="button" id="iVisit" onclick="selectVisit(this)">9名</button>
+            <button type="button" id="jVisit" onclick="selectVisit(this)">10名</button>
         </div>
 
         <div class="label">メニューをお選びください</div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">肩こり・腰痛整体</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">スポーツ整体</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">頭痛・めまい・不眠整体</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">日常生活・スポーツによるお怪我の治療</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">QUICK骨盤整体</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">交通事故によるお怪我の治療</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="15000">60分</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="15000">90分</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="15000">120分</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="15000">150分</button>
+            <button type="button" onclick="selectSymptom(this)" data-price="15000">180分</button>
         </div>
 
         <div class="label">希望日時</div>
@@ -508,7 +464,7 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目': 20,
+            '1回目': 0,
             '2回目以降': 0
         };
 
@@ -516,18 +472,17 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            'ベーシックマッサージ(パック付き)〈30分〉': 0
+            'ベーシックマッサージ(パック付き)〈30分〉': 30
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '肩こり・腰痛整体': 45,
-            'スポーツ整体': 45,
-            '頭痛・めまい・不眠整体': 60,
-            '日常生活・スポーツによるお怪我の治療': 30,
-            'QUICK骨盤整体': 30,
-            '交通事故によるお怪我の治療': 30
+            '60分': 60,
+            '90分': 90,
+            '120分': 120,
+            '150分': 150,
+            '180分': 180
         };
 
 
@@ -535,7 +490,9 @@
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
-            const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
+            const mail = document.getElementById('mail').value;
+            const phone = document.getElementById('phone').value;
+            const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご予約人数</strong></span>：${visitCount}` : '・ご予約人数が未選択です';
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
@@ -565,11 +522,13 @@
             document.getElementById('displayInfo').innerHTML = `
         <p>・<span style="color:red;"><strong>お名前</strong></span>：${name}</p>
         <hr>
+        <p>・<span style="color:red;"><strong>電話番号</strong></span>：${phone}</p>
+        <hr>
+        <p>・<span style="color:red;"><strong>メール</strong></span>：${mail}</p>
+        <hr>
         <p>${visitCountText}</p>
         <hr>
         <p>${selectedSymptomText}</p>
-        <hr>
-        <p>${totalTimeText}</p>
         <hr>
         <p>${selectedDateText}</p>
         <hr>
@@ -578,6 +537,8 @@
 
         // 各ボタンや入力フィールドでupdateDisplayInfoを呼び出すようにする
         document.getElementById('name').addEventListener('input', updateDisplayInfo);
+        document.getElementById('phone').addEventListener('input', updateDisplayInfo);
+        document.getElementById('mail').addEventListener('input', updateDisplayInfo);
         document.querySelectorAll('.visit-buttons button').forEach(button => {
             button.addEventListener('click', updateDisplayInfo);
         });
@@ -728,8 +689,16 @@
             // 選択された日時をリセット
             selectedFullDate = '';
 
-            document.getElementById('firstVisit').classList.remove('active');
-            document.getElementById('repeatVisit').classList.remove('active');
+            document.getElementById('aVisit').classList.remove('active');
+            document.getElementById('bVisit').classList.remove('active');
+            document.getElementById('cVisit').classList.remove('active');
+            document.getElementById('dVisit').classList.remove('active');
+            document.getElementById('eVisit').classList.remove('active');
+            document.getElementById('fVisit').classList.remove('active');
+            document.getElementById('gVisit').classList.remove('active');
+            document.getElementById('hVisit').classList.remove('active');
+            document.getElementById('iVisit').classList.remove('active');
+            document.getElementById('jVisit').classList.remove('active');
             element.classList.add('active');
             visitCount = element.innerText;
 
@@ -771,6 +740,7 @@
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
+                mail: document.getElementById('mail').value.trim(),
                 visitCount: visitCount,
                 selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
                 irradiationsCount: irradiationsCount,
@@ -789,6 +759,16 @@
                 return;
             }
 
+            if (!formData.mail) {
+                alert('メールアドレスを入力してください。');
+                return;
+            }
+
+            if (!formData.visitCount) {
+                alert('ご予約人数を選択してください。');
+                return;
+            }
+
             if (!formData.selectedSymptom) {
                 alert('メニューを選択してください。');
                 return;
@@ -802,10 +782,10 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nメール：${formData.mail}\nご予約人数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
-                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
+                alert('当日キャンセルは無いようにお願いいたします。');
                 /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
@@ -817,7 +797,7 @@
         function formatDate(dateStr) {
             if (!dateStr) return '';
             const date = new Date(dateStr);
-            return `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日${('0' + date.getHours()).slice(-2)}:${('0' + date.getMinutes()).slice(-2)}`;
+            return `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${('0' + date.getHours()).slice(-2)}:${('0' + date.getMinutes()).slice(-2)}`;
         }
 
         async function fetchAvailability(date) {
@@ -867,18 +847,16 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-                '09:00', '09:15', '09:30', '09:45',
-                '10:00', '10:15', '10:30', '10:45',
-                '11:00', '11:15', '11:30', '11:45',
-                '12:00', '12:15', '12:30', '12:45',
-                '13:00', '13:15', '13:30', '13:45',
-                '14:00', '14:15', '14:30', '14:45',
-                '15:00', '15:15', '15:30', '15:45',
-                '16:00', '16:15', '16:30', '16:45',
-                '17:00', '17:15', '17:30', '17:45',
-                '18:00', '18:15', '18:30', '18:45',
-                '19:00', '19:15', '19:30'
-            ];
+    '15:00', '15:30',
+    '16:00', '16:30',
+    '17:00', '17:30',
+    '18:00', '18:30',
+    '19:00', '19:30',
+    '20:00', '20:30',
+    '21:00', '21:30',
+    '22:00', '22:30',
+    '23:00', '23:30'
+];
 
             if (table.rows.length === 0) {
                 for (const time of times) {
@@ -954,6 +932,17 @@
                         continue;
                     }
 
+                    // 18時以降に終了する予約を不可にする (17:30は可)
+                    if (slotEnd.getHours() === 23 && slotEnd.getMinutes() > 30) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    } else if (slotEnd.getHours() > 23) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    }
+
                     // ここで終了時間を使った条件処理を行う
                     // 例えば、リアルタイムで既に過ぎた時間帯は×にする
                     if (slotStart < now) {
@@ -997,28 +986,8 @@
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
-                    // 月・火・木・金・土の09:00~10:59は✕にする（優先的にチェック）
-                    if ((slotStart.getDay() === 1 || slotStart.getDay() === 2 ||
-                        slotStart.getDay() === 4 || slotStart.getDay() === 5 ||
-                        slotStart.getDay() === 6) &&
-                        ((slotStart.getHours() === 12 && slotStart.getMinutes() >= 30) ||
-                            (slotStart.getHours() >= 13 && slotStart.getHours() <= 14))) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                    }
-                    // 土曜日の18:01～20:00まで✖にする
-                    else if (slotStart.getDay() === 6 && slotStart.getHours() >= 18 && slotStart.getHours() < 20 ||
-                        (slotStart.getHours() === 20 && slotStart.getMinutes() === 0)) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                    }
                     // 日曜日で、営業日ではない場合
                     else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                    }
-                    // 日曜日で、営業日ではない場合
-                    else if (slotStart.getDay() === 3 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
